--- a/ADMIN_TUBIREADY/My Project/Resources.resx
+++ b/ADMIN_TUBIREADY/My Project/Resources.resx
@@ -121,4 +121,7 @@
   <data name="SYS_LOGO" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\Resources\SYS_LOGO.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
+  <data name="signalStrengthIcon" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\signalStrengthIcon.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
 </root>
